# BibTexLint

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
bib_linter/: Cargo.toml
bib_linter/src/: bibtex.rs  main.rs  utils.rs
data/: small_test.bib  sources.bib
src/bibtexlint/: _preprint_strategies.py  check_preprint.py  check_preprints.py  cli.py  find_doi.py  linter.py  parser.py  preprint_strategies.py  process.py
