[project]
name = "bibtexlint"
version = "1.0.0"
description = "Linting .bib files and updating preprint papers automatically."
authors = [
    { name = "Lars-B", email = "berlinglars96@gmail.com" }
]
license = { text = "LGPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "habanero",
    "rapidfuzz",
]

[project.urls]
Homepage = "https://github.com/Lars-B/BibTexLint"
Issues = "https://github.com/Lars-B/BibTexLint/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bibtexlint"]

[project.scripts]
bibble = "bibtexlint.process:main"
